--- a/src/frame/package.json
+++ b/src/frame/package.json
@@ -10,9 +10,10 @@
   "author": "郭斌勇",
   "license": "ISC",
   "dependencies": {
-    "by-browser": "^1.0.7",
-    "by-http": "^1.0.5",
-    "vue-exp": "^1.0.3",
-    "vuex-expand": "^1.0.1"
+    "by-browser": "^1.0.9",
+    "by-http": "^1.0.7",
+    "vue-exp": "^1.0.5",
+    "vue-router-extend": "^1.0.1",
+    "vuex-expand": "^1.0.2"
   }
 }
