--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,16 +15,13 @@
     ],
     "paths": {
       ":src/*":["src/*"],
-      ":frameworks/*": ["src/frameworks/*"],
-      ":business/*": ["src/business/*"],
+      ":frame/*": ["src/frame/*"],
+      ":busine/*": ["src/busine/*"],
       ":app/*": ["src/app/*"],
+      ":views/*": ["src/app/views/*"],
       ":assets/*": ["src/app/assets/*"],
-
-      ":components/*": ["src/frameworks/components/*"],
-      ":compatible/*": ["src/business/compatible/*"],
-      ":network/*": ["src/app/network/*"],
-      ":libraries/*": ["src/frameworks/libraries/*"],
-      ":tools/*": ["src/frameworks/tools/*"]
+      ":components/*": ["src/app/components/*"],
+      ":network/*": ["src/app/network/*"]
     },
     "lib": [
       "esnext",
