--- a/src/frame/package.json
+++ b/src/frame/package.json
@@ -15,6 +15,10 @@
     "nav-type": "^1.0.1",
     "vue-exp": "^1.0.6",
     "vue-router-extend": "^1.0.3",
-    "vuex-expand": "^1.0.2"
+    "vuex-expand": "^1.0.2",
+    "vue-tls": "^1.0.2",
+    "back-scheme": "^1.0.0",
+    "element-display-switch": "^1.0.0",
+    "url-param-nav": "^1.0.0"
   }
 }
