--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "theme-app": "rm -rf src/app/theme && et -c src/app/element-variables.scss -o src/app/theme"
   },
   "dependencies": {
-    "busine": "file:src/busine",
+    "common": "file:src/common",
     "frame": "file:src/frame",
     "core-js": "^3.6.4",
     "element-ui": "^2.4.5",
