框架的依赖机制

--- a/package.json
+++ b/package.json
@@ -7,12 +7,24 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "common": "file:src/common",
     "core-js": "^3.6.4",
-    "frame": "file:src/frame",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+
+    "@gby/client": "^1.0.1",
+    "by-browser": "^1.0.9",
+    "by-http": "^1.0.7",
+    "nav-type": "^1.0.1",
+    "vue-exp": "^1.0.6",
+    "vue-router-extend": "^1.0.3",
+    "vuex-expand": "^1.0.2",
+    "listen-vue-switch": "^1.0.1",
+    "vnode-tls": "^1.0.0",
+    "vue-nav-stack": "^1.0.0",
+    "back-scheme": "^1.0.0",
+    "element-display-switch": "^1.0.0",
+    "url-param-nav": "^1.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
