--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
     "vuex": "^3.1.2",
+    "vant": "^2.9.0",
 
     "@gby/client": "^1.0.3",
     "by-browser": "^3.1.0",
