--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vue/cli-plugin-typescript": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "babel-plugin-import": "^1.13.0",
     "style-resources-loader": "^1.3.2",
     "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
