--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vue-project-template",
   "version": "0.1.0",
   "private": true,
+  "workspaces":["src/*"],
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -13,21 +14,7 @@
     "element-ui": "^2.4.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.5",
-    "vuex": "^3.1.2",
-
-    "@gby/client": "^1.0.3",
-    "by-browser": "^3.1.0",
-    "by-http": "^1.0.8",
-    "nav-type": "^1.0.4",
-    "vue-exp": "^1.0.7",
-    "vue-router-extend": "^1.0.6",
-    "vuex-expand": "^1.0.3",
-    "listen-vue-switch": "^1.0.3",
-    "vnode-tls": "^1.0.2",
-    "vue-nav-stack": "^1.0.2",
-    "back-scheme": "^1.0.1",
-    "element-display-switch": "^1.0.1",
-    "url-param-nav": "^1.0.3"
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
